8.0.0
7.10.1
 - Remove `-fanalyzer` option again; gcc is still broken.
 - Oops, no, minimum CMake version is not 3.28, but 3.12!
7.10.0
 - Deprecate `errorhandler`; replace with lambda-friendly "notice handlers."
 - Deprecate `notification_receiver`; replace with "notification handlers"
 - Bump minimum CMake version to 3.12. (#851, #874)
 - Fixed error message on clashing transaction focuses. (#879)
 - Don't call`/bin/true`; macOS doesn't have it.  Just call `true`. (#885)
 - Deprecate `exec_prepared()`; just use `exec()` with a `pqxx::prepped`.
 - Deprecate `exec1()` etc.  Use `result::expect_rows()` etc.
 - Fix error-reporting crash in non-blocking connection constructor. (#894)
 - Fix buffer overrun when converting array containing nulls to string. (#906)
 - Fix nullness check for `std::optional` containing a nullable value. (#907)
 - `connection::process_notice()` no longer appends newline if missing.
7.9.2
 - Fix CMake documentation install. (#848)
 - More CMake build fix. (#869)
 - Bump gcc/clang/postgres minimum version requirements.
 - Another fix to the readthedocs documentation build. (#845)
 - Remove obsolete CMake workaround kludges. (#851, #866, #867)
 - Remove obscure deprecated `stream_to` constructor that never worked. (#853)
 - Support reading a field as an SQL array using `as_sql_array()`. (#841)
 - Make row iterator a _proper_ `random_access_iterator`. (#846)
 - Downgrade result iterator to "bidirectional"; was never really RA. (#846)
7.9.1
 - Fix bad conversion of array of empty strings to string. (#816)
 - Move `[[likely]]` feature check back to compile time, to speed up configure.
 - Support `[[assume(...)]]`.
 - Fix `throw_null_conversion` compile error when converting enums. (#807)
 - Fix memory leak when failing to connect.
 - Improve introductory docs for connections and transactions.
 - Re-do entire documentation build.  No more Sphinx in readthedocs. (#802)
 - No more autodetection of doxygen etc.  Run it, or don't.